# csc486a

./: .gitignore  CMakeLists.txt  LICENSE
a1/: CMakeLists.txt
a1/include/ng/engine/: arithmetictype.hpp  debug.hpp  dynamicmesh.hpp  glcontext.hpp  iwindow.hpp  memory.hpp  renderer.hpp  resource.hpp  semaphore.hpp  window.hpp  windowevent.hpp  windowmanager.hpp
a1/src/: CMakeLists.txt
a1/src/ng/: CMakeLists.txt
a1/src/ng/app/: CMakeLists.txt  main.cpp
a1/src/ng/engine/: CMakeLists.txt  debug.cpp  iglcontext.hpp  iwindow.hpp  renderer.cpp  semaphore.cpp  window.cpp  windowmanager.cpp  xdisplay.cpp  xglcontext.cpp  xglcontext.hpp  xvisualinfo.cpp  xvisualinfo.hpp  xwindow.cpp  xwindow.hpp
a1/src/ng/engine/x11/: glxextensions.cpp  glxextensions.hpp  pthreadhack.hpp  xdisplay.cpp  xdisplay.hpp  xerrorhandler.cpp  xerrorhandler.hpp  xglcontext.cpp  xglcontext.hpp  xglcontextimpl.cpp  xglcontextimpl.hpp  xvisualinfo.cpp  xvisualinfo.hpp  xwindow.cpp  xwindow.hpp
include/ng/engine/: app.hpp  geometry.hpp  linearalgebra.hpp  memory.hpp  profiler.hpp  quickstart.hpp  renderer.hpp  renderstate.hpp  resource.hpp  semaphore.hpp  shaderprogram.hpp  staticmesh.hpp  uniform.hpp  vertexformat.hpp  window.hpp  windowevent.hpp  windowmanager.hpp
include/ng/engine/filesystem/: filesystem.hpp  readfile.hpp
include/ng/engine/math/: angles.hpp  constants.hpp  geometry.hpp  linearalgebra.hpp  quaternion.hpp
include/ng/engine/rendering/: material.hpp  mesh.hpp  primitivetype.hpp  renderbatch.hpp  renderer.hpp  renderobject.hpp  renderstate.hpp  sampler.hpp  scenegraph.hpp  staticmesh.hpp  texture.hpp  textureformat.hpp  uniform.hpp  vertexformat.hpp
include/ng/engine/util/: arithmetictype.hpp  compilertraits.hpp  immutable.hpp  profiler.hpp  scopeguard.hpp  synchronousfuture.hpp
include/ng/engine/window/: window.hpp  windowevent.hpp  windowmanager.hpp
include/ng/framework/: camera.hpp  catmullromspline.hpp  cubemesh.hpp  geometry.hpp  gridmesh.hpp  linestrip.hpp  renderobject.hpp  renderobjectmanager.hpp  renderobjectnode.hpp  tween.hpp  uvsphere.hpp
include/ng/framework/animation/: catmullromspline.hpp
include/ng/framework/loaders/: md5loader.hpp  objloader.hpp
include/ng/framework/meshes/: basismesh.hpp  cubemesh.hpp  implicitsurfacemesh.hpp  loopsubdivisionmesh.hpp  md5mesh.hpp  nearestjointskinnedmesh.hpp  objmesh.hpp  skeletalmesh.hpp  skeletonwireframemesh.hpp  squaremesh.hpp
include/ng/framework/models/: md5model.hpp  objmodel.hpp  skeletalmodel.hpp
include/ng/framework/renderobjects/: cubemesh.hpp
include/ng/framework/scenegraph/: camera.hpp  cubemesh.hpp  gridmesh.hpp  isosurface.hpp  light.hpp  linestrip.hpp  material.hpp  renderobject.hpp  renderobjectnode.hpp  scenegraph.hpp  shaderprofile.hpp  uvsphere.hpp
include/ng/framework/skeletal/: skeleton.hpp
include/ng/framework/textures/: checkerboardtexture.hpp
include/ng/framework/util/: fixedstepupdate.hpp
src/: CMakeLists.txt
src/ng/: CMakeLists.txt
src/ng/a1/: CMakeLists.txt  README.md  a1.cpp  main.cpp
src/ng/a2/: CMakeLists.txt  a2.cpp
src/ng/a3/: CMakeLists.txt  a3.cpp
src/ng/a4/: CMakeLists.txt  a4.cpp  robotarm.md5anim  robotarm.md5mesh
src/ng/a4/proposal/: Makefile  proposal.tex
src/ng/engine/: CMakeLists.txt  debug.cpp  main.cpp  profiler.cpp  quickstart.cpp  renderer.cpp  semaphore.cpp  windowevent.cpp  windowmanager.cpp
src/ng/engine/egl/: eglwindow.cpp  eglwindow.hpp
src/ng/engine/emscripten/: emscriptenwindow.cpp  emscriptenwindow.hpp
src/ng/engine/filesystem/: filesystem.cpp  readfile.cpp
src/ng/engine/opengl/: glenumconversion.hpp  glinstruction.cpp  glinstruction.hpp  globject.cpp  globject.hpp  glrenderer.cpp  glrenderer.hpp  openglcommands.cpp  openglcommands.hpp  openglenumconversion.hpp  opengles2commandvisitor.cpp  opengles2commandvisitor.hpp  openglrenderer.cpp  openglrenderer.hpp
src/ng/engine/rendering/: loopsubdivisionmesh.cpp  loopsubdivisionmesh.hpp  renderbatch.cpp  renderbatch.hpp  renderer.cpp  scenegraph.cpp  vertexformat.cpp
src/ng/engine/util/: profiler.cpp
src/ng/engine/window/: windowmanager.cpp
src/ng/engine/x11/: xwindow.cpp  xwindow.hpp
src/ng/framework/: CMakeLists.txt  camera.cpp  cubemesh.cpp  gridmesh.cpp  linestrip.cpp  renderobjectmanager.cpp  renderobjectnode.cpp  uvsphere.cpp
src/ng/framework/loaders/: md5loader.cpp  objloader.cpp
src/ng/framework/meshes/: basismesh.cpp  cubemesh.cpp  implicitsurfacemesh.cpp  loopsubdivisionmesh.cpp  md5mesh.cpp  nearestjointskinnedmesh.cpp  objmesh.cpp  skeletalmesh.cpp  skeletonwireframemesh.cpp  squaremesh.cpp
src/ng/framework/models/: skeletalmodel.cpp
src/ng/framework/renderobjects/: cubemesh.cpp
src/ng/framework/scenegraph/: cubemesh.cpp  gridmesh.cpp  isosurface.cpp  linestrip.cpp  renderobjectmanager.cpp  renderobjectnode.cpp  scenegraph.cpp  shaderprofile.cpp  uvsphere.cpp
src/ng/framework/skeletal/: skeleton.cpp
src/ng/framework/textures/: checkerboardtexture.cpp
src/ng/framework/util/: fixedstepupdate.cpp
